--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,27 +13,47 @@
  *= require_tree .
  *= require_self
 */
- @import "bootstrap";
+@import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 
- .notice {
+ .notice, .alert {
    margin: 0;
+   border: 0;
  }
-
-.alert {
-  margin: 0;
-  padding: 0;
+.alert, .notice {
+  padding: 0px 0 0 40%;
+  position: relative;
+  top: 20px;
 }
-
 h1 {
-  margin: 10px 0 0 0;
+  margin: 0;
   width: 0;
   height: 0;
 }
-
 .xc_logo {
-  width: 70px;
-  height: 70px;
-  margin-left: 20px;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  margin: 30px 0 0 50px;
+  // border: solid 1px;
 }
-
+.xc_logo:hover {
+  box-shadow: 0 2px 0 (black);
+}
+input:focus {
+  border: 2px solid #8a9cff;
+  outline: 0;
+}
+.log-status {
+  padding-left: 3px;
+  position: absolute;
+  top: 10px;
+  right: 70px;
+  color: rgb(255, 72, 0);
+  font-size: 80%;
+  font-family: 'ヒラギノ角ゴ ProN W6',
+  'HiraKakuProN-W6', // （Macintosh OS X 10.5以降）
+  'HiraKakuProN-W6';
+  box-shadow: -1px 1px 1px dimgrey;
+}
