changed_locales/ja.yml

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag song.image.url %>
   </p>
 <% end %>
-<%= form_with(url: songs_create_path, method: :post, local: true) do |f| %>
+<%= form_with model: Song.new, url: songs_create_path, method: :post, local: true do |f| %>
   <p><%=f.label "投稿者" %><br><%= f.text_field :name, placeholder: 'ハンドルネーム' %></p>
   <p><%=f.label "画像をアップロード" %><br><%= f.file_field :image %></p>
   <p><%= f.submit value: "投稿" %></p>
