--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,21 @@ h1 {
   width: 0;
   height: 0;
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+  height: 70px;
+  list-style: none;
+  white-space: nowrap;
+}
+li {
+  display: inline;
+}
+hr {
+  border-top: 0;
+}
+
 .xc_logo {
   position: absolute;
   width: 50px;
