--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="mypage">
+  <ul>
+    <li><%= link_to "アップリスト", uploadlists_path, id: "uplist_tag" %></li>
+    <li><%= link_to "アップロード", new_song_path %></li>
+  </ul>
+</div>
+
+
+
