--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,5 +1,5 @@
 <nav>
-  <ul>
+  <ul id="top_bar">
     <div id="input-search">
       <%= form_with(url: songs_path, method: :get, local: true) do |f| %>
         <%= f.button :type => "submit", title: "検索" do %>
