--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,14 +17,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 
- .notice, .alert {
-   margin: 0;
-   border: 0;
- }
+ 
 .alert, .notice {
-  padding: 0px 0 0 40%;
+  padding: 0 40%;
   position: relative;
   top: 20px;
+  margin: 0;
+  border: 0;
 }
 h1 {
   margin: 0;
@@ -32,16 +31,6 @@ h1 {
   height: 0;
 }
 
-ul {
-  padding: 0;
-  margin: 0;
-  height: 70px;
-  list-style: none;
-  white-space: nowrap;
-}
-li {
-  display: inline;
-}
 hr {
   border-top: 0;
 }
